@@ -619,7 +619,9 @@ XHTML id names.
 'permalink'         => 'Permanent link',
 'print'             => 'Print',
 'edit'              => 'Edit',
+'create'            => 'Create',
 'editthispage'      => 'Edit this page',
+'create-this-page'  => 'Create this page',
 'delete'            => 'Delete',
 'deletethispage'    => 'Delete this page',
 'undelete_short'    => 'Undelete {{PLURAL:$1|one edit|$1 edits}}',
